# raphael-sync

./: Dockerfile  README.md  openapi.yaml  pyproject.toml
src/raphael_sync/: __init__.py  app.py  platform_sink.py  routes.py  store.py
src/raphael_sync/calliope_agent/: __init__.py  __main__.py  config.py  diff_engine.py  server.py  session_state.py
src/raphael_sync/calliope_agent/ai/: training.py
src/raphael_sync/calliope_agent/compliance/: manager.py
src/raphael_sync/calliope_agent/graph/: __init__.py  neo4j_client.py  sync_service.py
src/raphael_sync/calliope_agent/inference/: __init__.py  engine.py
src/raphael_sync/plane_agent/: __init__.py  agent.py
tests/: conftest.py  test_health.py  test_sync.py  test_wal_sink.py
